# iot-embeddedc

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
samples/: CMakeLists.txt
src/: CMakeLists.txt  gatewayclient.h  iotf_network_tls_wrapper.c  iotfclient.h
